# evscript

./: .rustfmt.toml  Cargo.toml  README.md
examples/: demo.dyon
src/: main.rs  stdlib.dyon
