[package]
name = "evscript"
version = "0.0.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "System", "Desktop", "Input", "Evdev", "Keyboard", "Mouse", "Touchscreen", "Touchpad", "xcape" ]
description = "A tiny sandboxed Dyon scripting environment for evdev input devices"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/evscript"
repository = "https://github.com/myfreeweb/evscript"

[dependencies]
#libc = "0"
clap = "2"
rusty-sandbox = { git = "https://github.com/myfreeweb/rusty-sandbox", branch = "master" }
nix = { git = "https://github.com/nix-rust/nix", rev = "edf1bac" }
evdev = { git = "https://github.com/myfreeweb/evdev", branch = "uinput" }
#evdev = { path = "../../cmr/evdev" }
dyon = { version = "0.26", features = ["debug_resolve"] }
#dyon = { path = "../../PistonDevelopers/dyon", features = ["debug_resolve"] }
range = "0"
num = "0"
